[package]
name = "suppaftp"
version = "4.2.0"
authors = ["Matt McCoy <mattnenterprise@yahoo.com>", "Christian Visintin <christian.visintin1997@gmail.com>"]
edition = "2021" 
documentation = "https://docs.rs/suppaftp/"
repository = "https://github.com/veeso/suppaftp"
description = "A super FTP/FTPS client library for Rust"
include = ["src/**/*", "cli/**/*", "LICENSE-APACHE", "LICENSE-MIT", "README.md", "CHANGELOG.md"]
readme = "README.md"
license = "Apache-2.0/MIT"
keywords = ["ftp", "ftps", "network-protocol", "async"]
categories = ["asynchronous", "network-programming"]

[lib]
name = "suppaftp"
path = "src/lib.rs"

[[bin]]
name = "suppaftp"
path = "cli/main.rs"
required-features = ["sync-secure", "cli-bin"]

[dependencies]
chrono  = "^0.4.19"
lazy_static = "^1.4.0"
log = "^0.4.0"
regex = "^1.4.2"
thiserror = "^1.0.0"
async-trait = "0.1"
#maybe-async = { version = "0.2" }
maybe-async = { path = "../maybe-async-rs", package = "maybe-async" }
# async
async-std = { version = "^1.10.0", optional = true }
async-native-tls = { version = "^0.4.0", optional = true }
native-tls = { version = "^0.2", optional = true }
pin-project = { version = "^1.0.8", optional = true }
# cli-bin
env_logger = { version = "^0.9.0", optional = true }
rpassword = { version = "5.0.1", optional = true }

[dev-dependencies]
async-attributes = "1.1.2"
env_logger = "^0.9.0"
pretty_assertions = "^1.0.0"
rand = "^0.8.4"
serial_test = "^0.5.1"

[features]
# By default we use sync mode
default = ["async-secure"]

secure = ["sync-secure"]

# Enable async support for suppaftp
async = ["maybe-async/is_sync", "maybe-async/is_async", "dep:async-std", "dep:pin-project"]
async-secure = ["maybe-async/is_sync", "maybe-async/is_async", "dep:native-tls", "dep:async-std", "dep:async-native-tls", "dep:pin-project"]

# Enable support of FTPS which requires native-tls (openssl is required on Linux)
sync = ["maybe-async/is_sync"]
sync-secure = ["maybe-async/is_sync", "dep:native-tls"]

# Disable logging
no-log = ["log/max_level_off"]

# Must be enabled whenever testing with docker containers
with-containers = []

# Don't enable this feature; is used by suppaftp binary only
cli-bin = ["env_logger", "rpassword"]


with-encodings = []

support-ftpclient = []
